# desk-Bot

./: .gitignore  Features.md  index.html  new_features_roadmap.md  package-lock.json  package.json  player.md  pnpm-lock.yaml  prompt.md  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_engine.rs  cleaner.rs  clipboard.rs  device.rs  main.rs  monitor.rs  sandbox.rs  system_hooks.rs  usb_monitor.rs
src/components/: BreakOverlay.tsx  ClipboardShield.tsx  Dashboard.tsx  FloatingBar.tsx  GlassCard.tsx  LeftGraph.tsx  PlayerFooter.tsx  SandboxPanel.tsx  SettingsGear.tsx  StorageCard.tsx  ThemeWrapper.tsx  UsbShield.tsx
src/components/WorkspaceCleaner/: DeletionLoader.tsx  RiskModal.tsx  ScanningPanel.tsx
src/hooks/: useAudioEngine.ts  useMetrics.ts  useNotifications.ts  useScreenTime.ts  useWorkspaceCleaner.ts
src/store/: useClipboardStore.ts  usePlayerStore.ts  useSandboxStore.ts  useSecurityStore.ts  useSettingsStore.ts  useUsbShieldStore.ts  useWorkspaceCleanerStore.ts
