[package]
name = "desk-well"
version = "0.1.0"
description = "Desktop wellness application for ergonomic health"
authors = ["DeskWell"]
license = "MIT"
repository = ""
edition = "2021"
default-run = "desk-well"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["custom-protocol", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-notification = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
arboard = "3.4"
regex = "1"



# Audio Processing
symphonia = { version = "0.5", features = ["aac", "alac", "flac", "mp3", "ogg", "pcm", "vorbis", "wav"] }
rodio = { version = "0.18", features = ["symphonia-all"] }
lofty = "0.18"
rand = "0.8"
walkdir = "2"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Utilities
chrono = "0.4"
lazy_static = "1.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2", features = ["xss"] }
libc = "0.2"
